transmission/transmission-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: media
  labels:
    app: transmission
spec:
  type: ClusterIP
  ports:
    - port: 9091
      targetPort: 9091
      protocol: TCP
      name: webui
    - port: 51413
      targetPort: 51413
      protocol: TCP
      name: torrent-tcp
    - port: 51413
      targetPort: 51413
      protocol: UDP
      name: torrent-udp
  selector:
    app: transmission
