transmission/transmission-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: transmission
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.trans.teklogi.systems`)
      kind: Rule
      services:
        - name: transmission
          port: 9091
    - match: Host(`trans.teklogi.systems`)
      kind: Rule
      services:
        - name: transmission
          port: 9091
